2008-07-17  Sam Steingold  <sds@gnu.org>

	* macros3.lisp (canonicalize): new function

2008-07-17  Sam Steingold  <sds@gnu.org>

	* pathname.d (assure_dir_exists) [PATHNAME_UNIX]: fix a GC-safety
	bug introduced on 2008-07-11 (get_path_info is GC-unsafe)
	(classify_namestring): GC-safe

2008-07-17  Sam Steingold  <sds@gnu.org>

	* pathname.d: more robust HAVE_SHELL conditional handling

2008-07-17  Sam Steingold  <sds@gnu.org>

	* error.d (check_c_integer_replacement): use the appropriate
	[su]int(8|16|32|64)_p test instead of always using uint8_p

2008-07-17  Sam Steingold  <sds@gnu.org>

	* error.d (caller_name): new function
	(check_symbol_replacement, check_variable_value_replacement):
	use it when the caller maybe either Subr or Fsubr
	Reported by Vladimir Tzankov <vtzankov@gmail.com>

2008-07-17  Sam Steingold  <sds@gnu.org>

	* pathname.d (directory_search_scandir) [WIN32_NATIVE]: use
	direntry_to_string in one more place

2008-07-17  Sam Steingold  <sds@gnu.org>

	* condition.lisp (check-value): disable USE-VALUE when place is
	*PATHNAME-ENCODING* because O(pathname_encoding) is used multiple
	times for the same directory entry

2008-07-16  Sam Steingold  <sds@gnu.org>

	* eval.d (invoke_handlers): reactivate and deactivate handlers
	only around lisp-compiled handlers, not C handlers, who must
	deactivate themselves (this is necessary because the C handlers
	which call longjmp do not abide by the HANDLER_FRAME)
	* pathname.d (handle_directory_encoding_error): deactivate when
	already running; reset STACK
	(direntry_to_string): check STACK

2008-07-16  Sam Steingold  <sds@gnu.org>

	* macros2.lisp (report-one-new-value-string)
	(report-one-new-value-string-instead, report-new-values-string):
	remove the leading "You may " from the message: the message
	describes the action of the user, such as "Abort main loop" or
	"inspect this frame", cf. reploop.lisp
	* reploop.lisp (commands1): more uniform message capitalization
