@@ -550,26 +550,37 @@ T
   (let* ((r (rational x))
          (n (numerator r))
          (d (denominator r))
-         (y (/ (1+ (* scale n)) (1+ (* scale d)))))
+         (y (/ (1+ (* scale n)) (1+ (* scale d))))
+         (z (/ (1+ (* scale scale n)) (1+ (* scale d)))))
     (list (= y x)               ; nil
+          (or (< (- x) x z) (> (- x) x z))
           (or (< 1 y x) (> 1 y x))))) ; t
 float-rational-cmp
 
-(float-rational-cmp pi) (NIL T)
-(float-rational-cmp (float pi 1d0)) (NIL T)
-(float-rational-cmp (float pi 1f0)) (NIL T)
-(float-rational-cmp (float pi 1s0)) (NIL T)
-(float-rational-cmp (/ pi)) (NIL T)
-(float-rational-cmp (float (/ pi) 1d0)) (NIL T)
-(float-rational-cmp (float (/ pi) 1f0)) (NIL T)
-(float-rational-cmp (float (/ pi) 1s0)) (NIL T)
+(float-rational-cmp pi) (NIL T T)
+(float-rational-cmp (float pi 1d0)) (NIL T T)
+(float-rational-cmp (float pi 1f0)) (NIL T T)
+(float-rational-cmp (float pi 1s0)) (NIL T T)
+(float-rational-cmp (float pi -1d0)) (NIL T T)
+(float-rational-cmp (float pi -1f0)) (NIL T T)
+(float-rational-cmp (float pi -1s0)) (NIL T T)
+(float-rational-cmp (/ pi)) (NIL T T)
+(float-rational-cmp (float (/ pi) 1d0)) (NIL T T)
+(float-rational-cmp (float (/ pi) 1f0)) (NIL T T)
+(float-rational-cmp (float (/ pi) 1s0)) (NIL T T)
 
-(float-rational-cmp most-positive-short-float) (NIL T)
-(float-rational-cmp least-positive-short-float) (NIL T)
-(float-rational-cmp most-positive-single-float) (NIL T)
-(float-rational-cmp least-positive-single-float) (NIL T)
-(float-rational-cmp most-positive-double-float) (NIL T)
-(float-rational-cmp least-positive-double-float) (NIL T)
+(float-rational-cmp most-positive-short-float) (NIL T T)
+(float-rational-cmp least-positive-short-float) (NIL T T)
+(float-rational-cmp most-positive-single-float) (NIL T T)
+(float-rational-cmp least-positive-single-float) (NIL T T)
+(float-rational-cmp most-positive-double-float) (NIL T T)
+(float-rational-cmp least-positive-double-float) (NIL T T)
+(float-rational-cmp most-negative-short-float) (NIL T T)
+(float-rational-cmp least-negative-short-float) (NIL T T)
+(float-rational-cmp most-negative-single-float) (NIL T T)
+(float-rational-cmp least-negative-single-float) (NIL T T)
+(float-rational-cmp most-negative-double-float) (NIL T T)
+(float-rational-cmp least-negative-double-float) (NIL T T)
 
 (progn (symbol-cleanup 'check-xgcd)
        (symbol-cleanup 'check-sqrt)
