@@ -1,5 +1,12 @@
 2008-07-17  Sam Steingold  <sds@gnu.org>
 
+	* dfloat.d (RA_to_DF): clean up the STACK before error_overflow()
+	* ffloat.d (RA_to_FF): ditto
+	* sfloat.d (RA_to_SF): ditto
+	These bugs are probably ~20 years old.
+
+2008-07-17  Sam Steingold  <sds@gnu.org>
+
 	* macros3.lisp (canonicalize): new function
 
 2008-07-17  Sam Steingold  <sds@gnu.org>
